--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Version:        1.0.5
 License:        GNU General Public License v2 or later
 License URI:    http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:    fagri
-Template:       hestia-pro
+Template:       hestia
 Tags: blog, custom-logo, portfolio, e-commerce, rtl-language-support, grid-layout, one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, left-sidebar, right-sidebar, footer-widgets
 
 This theme, like WordPress, is licensed under the GPL.
@@ -1501,6 +1501,21 @@ input:focus-within label {
   line-height: 30px;
 }
 
+@media (max-width: 1199px) {
+  .logged-in #respond.comment-respond .logged-in-as {
+    transform: translateX(-10%);
+  }
+}
+@media (max-width: 991px) {
+  .logged-in #respond.comment-respond .logged-in-as {
+    transform: translateX(-9%);
+  }
+}
+@media (max-width: 768px) {
+  .logged-in #respond.comment-respond .logged-in-as {
+    transform: translateX(0%);
+  }
+}
 /* Leave a reply logged out */
 #respond.comment-respond .pull-left.author {
   margin: -15px 20px 0 0;
